k8s/bak/hello-nodejs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nodejs
  labels:
    app: hello-nodejs
    service: hello-nodejs
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: hello-nodejs
