k8s/bak/hello-nodejs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-nodejs
spec:
  ingressClassName: ingress-http.gateway  
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-nodejs
            port:
              number: 80
